# yfinance-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  railway.json
src/yfmcp/: analyst_fetcher.py  auth.py  batch.py  earnings_fetcher.py  financials_fetcher.py  industry.py  jq_filter.py  logging.py  news_fetcher.py  options.py  price_history_fetcher.py  quote_fetcher.py  screener.py  server.py  yf_runner.py
templates/yfinance_get_quote/: screener_template.jq
tests/: test_get_ticker_coalescing.py  test_jq_filter.py  test_quote_fetcher.py  test_rest_api.py  test_server_unit.py
