[project]
name            = "yfmcp"
version         = "0.13.0"
description     = ""
readme          = "README.md"
requires-python = ">=3.12"
authors         = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
classifiers     = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies    = [
  "loguru>=0.7.3",
  "lxml>=5.3.0",
  "matplotlib>=3.10.9",
  "mcp>=1.27.0",
  # Required by pandas.DataFrame.to_markdown() for price history table output.
  "tabulate>=0.10.0",
  "yfinance>=1.3.0",
]

[project.scripts]
yfmcp = "yfmcp.server:main"

[dependency-groups]
dev = [
  "mcp[cli]>=1.27.0",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
  "ty>=0.0.32",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version  = "0.13.0"
tag              = true
commit           = true
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "B",      # flake8-bugbear
  "C",      # flake8-comprehensions
  "E",      # pycodestyle errors
  "F",      # pyflakes
  "I",      # isort
  "N",      # pep8-naming
  "SIM",    # flake8-simplify
  "UP",     # pyupgrade
  "W",      # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.tombi.format.rules]
key-value-equals-sign-alignment = true
trailing-comment-alignment      = true

[tool.ty.rules]
unresolved-attribute = "ignore"
